fix whitespace for case studies page in mobile view

--- a/app/globals.css
+++ b/app/globals.css
@@ -50,6 +50,12 @@ body {
   box-shadow: 32px 32px 71px 0px rgba(2, 82, 205, 0.28) !important; 
 }
 
+@media (prefers-color-scheme: dark) {
+  .custom-box-shadow:hover {
+    box-shadow: 32px 32px 71px 0px rgba(66, 141, 255, 0.28) !important;
+  }
+}
+
 .custom-box-shadow-blue {
   box-shadow: 10px 10px 26px 0px rgba(2, 82, 205, 0.28);
 }
